# stc-lang

./: .gitignore  .gitmodules  LICENSE  README.md  fbm_data_parallelism.hs  fbm_parallelism_runner.hs  package.yaml  stack.yaml  state.1.hs  statefulness.cabal
app/: DBService.hs  KVService.hs  Main.hs  db.thrift  kvservice.thrift
app/Database/: DatabaseService.hs
app/Kvstore/: KeyValueService.hs
benchmarks/: benchmarks.cabal  package.yaml
benchmarks/src/: BasicBench.hs  BenchLib.hs  BlackScholes.hs  Mandelbrot.hs  MatMult.hs  SumEuler.hs  bench_runner.hs  benchmarks.hs  blackscholes_data.hs  fbm_data_parallelism.hs  fbm_parallelism_runner.hs
cbits/: build.sh  my_state.h  test.c
src/: FuturesBasedMonad.hs  Generator.hs  OhuaM.hs  SfOperations.hs  Statefulness.hsc  StreamsBasedExplicitAPI.hs  StreamsBasedFreeMonad.hs  StreamsBasedMonad.hs  StreamsBasedMonad2.hs  notsosimple.hs  simpleWithSmap.hs  testSfOperations.hs
src/Control/Monad/: DD.hs  Generator.hs  SD.hs  Stream.hs
src/Control/Monad/DD/: IndexAPI.hs  StreamsBasedExplicitAPI.hs  StreamsBasedFreeMonad.hs
src/Control/Monad/Ohua/: ST.hs
src/Control/Monad/Par/Scheds/: TraceDebuggable.hs
src/Control/Monad/SD/: Case.hs  Combinator.hs  FRP.hs  Ohua.hs  SD.hs  STCLang.hs  Signals.hs  Smap.hs
src/Control/Monad/Stream/: Chan.hs  Par.hs  PinnedChan.hs
src/Data/: Dynamic2.hs  DynamicUtils.hs  StateElement.hs  Statistics.hs
src/Data/Ohua/: STRef.hs
src/Debug/: Scheduler.hs  SchedulerInternal.hs
src/Monad/: FuturesBasedMonad.hs  Generator.hs  Sbfm.hs  StreamsBasedExplicitAPI.hs  StreamsBasedFreeMonad.hs
src/Type/: Magic.hs
src/Type/Magic/: GHC8.hs  OldGHC.hs
statefulness-perf-exe/: Main.hs
stream-bench/: CampaignProcMap.hs  MutableNFMap.hs  MutableSet.hs  algo.hs
streams-based-exe/: Main.hs
test/: CorrectnessFuturesBasedMonad.hs  CorrectnessStreamsBasedMonad.hs  FakeComputation.hs  ParallelismFuturesBasedMonad.hs  PerformanceFuturesBasedMonad.hs  PerformanceStreamsBasedMonad.hs  Runner.hs  SBFMPerfBenchmark.hs  STMonadStateThreads.hs  Spec.hs  TestFuturesBasedMonad.hs  bf-traverse-ohua.hs  usecase1.hs
test/DD/: Correctness.hs  Performance.hs
test/SD/: Correctness.hs  Performance.hs
test/common/: FakeComputation.hs
test/perf-exe/: Main.hs
test/unit/DD/: Correctness.hs  Performance.hs
tries/: Lib.hs  SfOperations.hs  Sfc.hs  StreamsBasedMonad.hs  StreamsBasedMonad2.hs  notsosimple.hs  notsosimple0.hs  notsosimpleWithSmap.hs  simple.hs  state.2.hs
