name:                statefulness
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/nrink/statefulness#readme
license:             BSD3
license-file:        LICENSE
author:              Norman Rink, Sebastian Ertel
maintainer:          example@example.com
copyright:           2017 Norman Rink, Sebastian Ertel
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  -- exposed-modules:     FuturesBasedMonad
  -- exposed-modules:     Statefulness, Sfc, FuturesBasedMonad, Scheduler, SchedulerInternal
  exposed-modules:     Statefulness, Sfc, FuturesBasedMonad, StreamsBasedFreeMonad
  other-modules: Data.Dynamic2
  build-depends:       base >= 4.7 && < 5,
                       mtl >= 2.2.1,
                       monad-par >= 0.3.4,
                       deepseq,
                       containers,
                       parallel,
                       abstract-par,
                       free,
                       async,
                       microlens,
                       microlens-mtl,
                       ohua-core,
                       data-default-class,
                       OneTuple
  default-language:    Haskell2010
  include-dirs:        cbits
  includes:            cbits/my_state.h
  install-includes:    cbits/my_state.h
  c-sources:           cbits/test.c
  extra-lib-dirs:      /Users/sertel/sandbox/statefulness/cbits
  -- ghc-options:         -auto-all -Wall -O2 -fPIC -ddump-to-file -ddump-simpl -dverbose-core2core -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  ghc-options:         -auto-all -Wall -fPIC -fno-cse -ddump-to-file -ddump-simpl -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  default-extensions:  ForeignFunctionInterface
  cc-options:          -fPIC
  build-tools:        hsc2hs

executable statefulness-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-to-file -ddump-simpl -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  build-depends:       base
                     , statefulness
                     , mtl
                     , monad-par
  default-language:    Haskell2010


test-suite statefulness-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  -- main-is:             CorrectnessFuturesBasedMonad.hs
  -- main-is:             ParallelismFuturesBasedMonad.hs
  main-is:             CorrectnessStreamsBasedMonad.hs
  build-depends:       base
                     , statefulness
                     , mtl
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , parallel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-to-file -ddump-ds -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  default-language:    Haskell2010

executable streams-based-monad-exe
  hs-source-dirs: streams-based-exe
  main-is: Main.hs
  build-depends: base, statefulness
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.org/nrink/statefulness
