name:                statefulness
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/nrink/statefulness#readme
license:             BSD3
license-file:        LICENSE
author:              Norman Rink, Sebastian Ertel, Justus Adam
maintainer:          example@example.com
copyright:           2017 Norman Rink, Sebastian Ertel, Justus Adam
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:       Control.Monad.SD
                       , Control.Monad.DD.StreamsBasedFreeMonad
                       , Control.Monad.DD.StreamsBasedExplicitAPI
                       -- , Monad.Sbfm
                       , Control.Monad.Ohua.ST
                       , Data.Ohua.STRef
                       -- debugging:
                       -- Debug.Scheduler
                       -- Debug.SchedulerInternal
                       , Data.Dynamic2
                       , Data.StateElement
                       , Type.Magic
                       , Monad.Generator
                       -- , Control.Monad.Par.Scheds.TraceDebuggable
                       , Control.Monad.Stream
                       , Control.Monad.Stream.Chan
                       , Control.Monad.Stream.Par
                       , Control.Monad.Stream.PinnedChan
                       , Data.Statistics
  if impl(ghc >= 8.2.0)
    other-modules:       Type.Magic.GHC8
  else
    other-modules:       Type.Magic.OldGHC
  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       monad-par,
                       monad-par-extras,
                       deepseq,
                       containers,
                       parallel,
                       abstract-par,
                       free,
                       async,
                       microlens,
                       microlens-mtl,
                       ohua-core,
                       data-default-class,
                       OneTuple,
                       vector,
                       monad-loops,
                       stm,
                       transformers,
                       natural-transformation,
                       rdtsc,
                       split,
                       bytestring,
                       time,
                       abstract-par,
                       aeson,
                       bytestring,
                       foundation,
                       protolude,
                       BoundedChan
  default-language:    Haskell2010
  -- ghc-options:         -auto-all -Wall -O2 -fPIC -ddump-to-file -ddump-simpl -dverbose-core2core -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  ghc-options:         -Wall -O2 -fPIC -fno-cse -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo



-- examples that use FFI
-- library
--   hs-source-dirs:      tries
--   exposed-modules:     Statefulness,
--                        Sfc,
--   build-depends:       base,
--                        mtl,
--                        monad-par,
--                        deepseq,
--                        containers,
--                        parallel,
--                        abstract-par,
--                        free,
--                        async,
--                        microlens,
--                        microlens-mtl,
--                        ohua-core,
--                        data-default-class,
--                        OneTuple
--   default-language:    Haskell2010
--   include-dirs:        cbits
--   includes:            cbits/my_state.h
--   install-includes:    cbits/my_state.h
--   c-sources:           cbits/test.c
--   extra-lib-dirs:      /Users/sertel/sandbox/statefulness/cbits
--   -- ghc-options:         -auto-all -Wall -O2 -fPIC -ddump-to-file -ddump-simpl -dverbose-core2core -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
--   ghc-options:         -auto-all -Wall -fPIC -fno-cse -ddump-to-file -ddump-simpl -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
--   default-extensions:  ForeignFunctionInterface
--   cc-options:          -fPIC
--   build-tools:        hsc2hs
--
-- executable statefulness-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-to-file -ddump-simpl -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
--   build-depends:       base
--                      , statefulness
--                      , mtl
--                      , monad-par
--   default-language:    Haskell2010


test-suite statefulness-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       CorrectnessFuturesBasedMonad
                     , CorrectnessStreamsBasedMonad
                     , STMonadStateThreads
                     , FakeComputation
                     , PerformanceFuturesBasedMonad
                     , PerformanceStreamsBasedMonad
                     , SBFMPerfBenchmark
  build-depends:       base
                     , statefulness
                     , mtl
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , parallel
                     , microlens
                     , transformers
                     , ghc-prim
                     , deepseq
                     , time
                     , rdtsc
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-to-file -ddump-ds -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  -- ghc-options:
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N1
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N2
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N3
  ghc-options:         -threaded -Wall -O2 -rtsopts -with-rtsopts=-N4
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N4-qa
  -- ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  -- ghc-options:         -threaded -rtsopts -O2
  -- ghc-options:         -threaded -O2
  default-language:    Haskell2010

executable statefulness-perf-exe
  hs-source-dirs:      statefulness-perf-exe, test
  main-is:             Main.hs
  other-modules:       FakeComputation, SBFMPerfBenchmark
  build-depends:       base
                     , statefulness
                     , mtl
                     , parallel
                     , microlens
                     , transformers
                     , ghc-prim
                     , deepseq
                     , time
                     , rdtsc
  -- ghc-options:         -threaded -ddump-hi -ddump-ds -ddump-simpl -dverbose-core2core -ddump-to-file -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-to-file -ddump-ds -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  -- ghc-options:
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N1
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N2
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N3
  -- ghc-options:         -threaded -Wall -O2 -feager-blackholing -eventlog
  ghc-options:         -threaded -Wall -O2 -eventlog -rtsopts
  -- ghc-options:         -threaded -Wall -O2 -eventlog -rtsopts -with-rtsopts=-N4
  -- ghc-options:         -threaded -Wall -O2 -rtsopts -with-rtsopts=-N4
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N4-qa
  -- ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  -- ghc-options:         -threaded -rtsopts -O2
  -- ghc-options:         -threaded -O2
  default-language:    Haskell2010

executable streams-based-monad-exe
  hs-source-dirs: streams-based-exe
  main-is: Main.hs
  build-depends: base, statefulness
  default-language: Haskell2010

executable ohua-stream-bench
  hs-source-dirs:      stream-bench
  main-is:             algo.hs
  build-depends:       base
                     , statefulness
                     , hashtables
                     , text
                     , deepseq
                     , hashable
                     , time
                     , mtl
                     , aeson
                     , bytestring
                     , hedis
                     , uuid-types
                     , random
                     , hw-kafka-client
                     , microlens-aeson
                     , microlens
                     , yaml
                     , random
                     , clock
                     , vector
                     , BoundedChan
  other-modules:       MutableNFMap
                     , CampaignProcMap
                     , MutableSet
  ghc-options: -threaded -with-rtsopts=-N
  -- ghc-options:         -optl-static -optl-pthread
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.org/nrink/statefulness
